@@ -41,6 +41,7 @@
     <!ENTITY version2-generic	     "2.x" >
     <!ENTITY version30		        "3.0" >
     <!ENTITY version31		        "3.1" >
+    <!ENTITY version32             "3.2" >
     <!ENTITY tcltk-url             "http://www.tcl.tk/" >
     <!ENTITY apache-url            "http://httpd.apache.org" >
     <!ENTITY apache-apr            "http://apr.apache.org/" >
